--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
     <meta name="author" content="Shaharehar Rahaman Anik" />
     <meta
       name="keywords"
-      content="Shaharehar Rahaman Anik, Portfolio, MERN Stack Developer, Software Engineer, Figma Designer, React, Node.js, Brain Station 23"
+      content="Shaharehar Rahaman Anik, Portfolio, MERN Stack Developer, Software Engineer, Figma Designer, React, Node.js, Brain Station 23, Web Development, Frontend Developer, Backend Developer, Full Stack Developer, JavaScript Expert, Bangladesh Developer"
     />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shahareharrahamananik.netlify.app/" />
+    <meta property="og:title" content="Shaharehar Rahaman Anik - Software Engineer Portfolio" />
+    <meta property="og:description" content="Professional portfolio showcasing software development, web development, and design projects by Shaharehar Rahaman Anik." />
+    <meta property="og:image" content="/src/assets/logo-white.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://shahareharrahamananik.netlify.app/" />
+    <meta property="twitter:title" content="Shaharehar Rahaman Anik - Software Engineer Portfolio" />
+    <meta property="twitter:description" content="Professional portfolio showcasing software development, web development, and design projects by Shaharehar Rahaman Anik." />
+    <meta property="twitter:image" content="/src/assets/logo-white.png" />
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://shahareharrahamananik.netlify.app/" />
+    
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="/src/assets/logo-white.png"
     />
-    <title>Shaharehar Rahaman Anik</title>
+    <title>Shaharehar Rahaman Anik - Software Engineer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
