--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to the personal portfolio of Shaharehar Rahaman Anik. Explore projects, experience, and skills in software development, game development and machine learning."
+      content="Welcome to the personal portfolio of Shaharehar Rahaman Anik. Explore projects, experience, and skills in software development and SQA,  machine learning."
     />
     <meta name="author" content="Shaharehar Rahaman Anik" />
     <meta
       name="keywords"
-      content="Shaharehar Rahaman Anik, Portfolio, MERN Stack Developer, Software Engineer, Figma Designer, React, Node.js, Brain Station 23, Web Development, Frontend Developer, Backend Developer, Full Stack Developer, JavaScript Expert, Bangladesh Developer"
+      content="Shaharehar Rahaman Anik, Anik, Shaharehar, Portfolio, Electrical Engineer, SQA, Quality Assurance, Software Engineer,Software Quality Assurance React, Node.js, Brain Station 23, Web Development, Frontend Developer, Backend Developer, Full Stack Developer, JavaScript Expert, Bangladesh Developer, Nitex"
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -35,7 +35,7 @@
       sizes="16x16"
       href="/src/assets/logo-white.png"
     />
-    <title>Shaharehar Rahaman Anik - Software Engineer Portfolio</title>
+    <title>Anik | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
