--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to the personal portfolio of Shaharehar Rahaman Anik. Explore projects, experience, and skills in software development and SQA,  machine learning."
+      content="Shaharehar Rahaman Anik - Software Quality Assurance (SQA) Engineer with 4 years of experience in QA Automation and Application Support. Expert in WebDriverIO, Selenium, Appium, and Playwright."
     />
     <meta name="author" content="Shaharehar Rahaman Anik" />
     <meta
       name="keywords"
-      content="Shaharehar Rahaman Anik, Anik, Shaharehar, Portfolio, Electrical Engineer, SQA, Quality Assurance, Software Engineer,Software Quality Assurance React, Node.js, Brain Station 23, Web Development, Frontend Developer, Backend Developer, Full Stack Developer, JavaScript Expert, Bangladesh Developer, Nitex"
+      content="Shaharehar Rahaman Anik, Anik, Shaharehar, SQA Engineer, Quality Assurance Engineer, Software Quality Assurance, QA Automation, WebDriverIO, Selenium, Appium, Playwright, Brain Station 23, Nitex, Tech Eureka, Software Testing, Test Automation, Bangladesh"
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shahareharrahamananik.netlify.app/" />
-    <meta property="og:title" content="Shaharehar Rahaman Anik - Software Engineer Portfolio" />
-    <meta property="og:description" content="Professional portfolio showcasing software development, web development, and design projects by Shaharehar Rahaman Anik." />
-    <meta property="og:image" content="/src/assets/logo-white.png" />
+    <meta property="og:title" content="Shaharehar Rahaman Anik - Software Quality Assurance Engineer" />
+    <meta property="og:description" content="Professional SQA Engineer with 4 years of experience in QA Automation and Application Support. Expert in WebDriverIO, Selenium, Appium, and Playwright." />
+    <meta property="og:image" content="https://shahareharrahamananik.netlify.app/src/assets/logo-white.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://shahareharrahamananik.netlify.app/" />
-    <meta property="twitter:title" content="Shaharehar Rahaman Anik - Software Engineer Portfolio" />
-    <meta property="twitter:description" content="Professional portfolio showcasing software development, web development, and design projects by Shaharehar Rahaman Anik." />
-    <meta property="twitter:image" content="/src/assets/logo-white.png" />
+    <meta property="twitter:title" content="Shaharehar Rahaman Anik - Software Quality Assurance Engineer" />
+    <meta property="twitter:description" content="Professional SQA Engineer with 4 years of experience in QA Automation and Application Support. Expert in WebDriverIO, Selenium, Appium, and Playwright." />
+    <meta property="twitter:image" content="https://shahareharrahamananik.netlify.app/src/assets/logo-white.png" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://shahareharrahamananik.netlify.app/" />
@@ -35,7 +35,7 @@
       sizes="16x16"
       href="/src/assets/logo-white.png"
     />
-    <title>Anik | Portfolio</title>
+    <title>Shaharehar Rahaman Anik - Software Quality Assurance Engineer</title>
   </head>
   <body>
     <div id="root"></div>
